src/snapshots/headson__order__tests__order_empty_array_order.snap
---
source: src/order.rs
expression: "lines.join(\"\\n\")"
---
len=1
RankedNode { node_id: NodeId(0), parent_id: ParentId(None), kind: Array, depth: 0, key_in_object: None, number_value: None, bool_value: None, string_value: None }
