src/snapshots/headson__order__tests__pq_empty_array_queue.snap
---
source: src/order.rs
expression: "lines.join(\"\\n\")"
---
len=1
RankedNode { node_id: NodeId(0), parent_id: ParentId(None), kind: Array, depth: 0, index_in_array: None, key_in_object: None, priority: 1, number_value: None, bool_value: None, string_value: None } prio=1
